--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 accelerate==0.21.0
-datasets==2.3.2
+datasets==2.15.0
 huggingface-hub==0.14.1
 jsonpickle==3.0.1
 # matplotlib==3.2.1
@@ -9,7 +9,7 @@ openprompt==1.0.1
 protobuf==3.20.0
 pytorch-transformers==1.0.0
 scikit-learn==0.22.1
-seaborn==0.12.2
+# seaborn==0.12.2
 # tensorboard==2.11.2
 torch==1.12.0
 tqdm==4.65.0
