--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 accelerate
 datasets==2.15.0
-pipjsonpickle
+huggingface-hub
+jsonpickle
+matplotlib
 numpy
 openprompt
+pandas
 protobuf==3.20.0
 scikit-learn
+seaborn
 torch
-tqdm
+tqdm==4.65.0
 transformers==4.35.1
+bertopic
+nltk
+flair
+gensim
