--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-accelerate
-datasets==2.15.0
+accelerate==0.26.1
+datasets>=2.15.0
 jsonpickle
 numpy
-openprompt
+openprompt==1.0.1
 protobuf==3.20.0
 scikit-learn
 torch
 tqdm
+pandas
 transformers==4.35.1
